--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,6 @@
     <title>MEGA PENIS</title>
 </head>
 <body>
-TEXT O MEGA PENISE    
+<p style="text-align:center;"><img src="./Безымянный.png"></p>
 </body>
 </html>
